styling improvemnts + fix toggle wrap

--- a/web/static/sillypaste/style.css
+++ b/web/static/sillypaste/style.css
@@ -19,7 +19,7 @@ pre {
 }
 
 /* Via https://css-tricks.com/the-checkbox-hack/ */
-#toggle-wrap:checked ~ pre {
+div #toggle-wrap:checked ~ pre {
     white-space: pre-wrap;
 }
 
